--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        
+        <div class="welcome-main-container"></div>
+        <div class="mood-bar">
+            <div class="mood-button-container">
+                <div class="mood-button">Happy</div>
+                <div class="mood-button">Sad</div>
+                <div class="mood-button">Chill</div>
+                <div class="mood-button">Hype</div>
+                <div class="mood-button">Romantic</div>
+                <div class="mood-button">Motivated</div>
+            </div>
+        </div>
     </body>
 </html>
