makes moods into buttons adds container for content page

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div class="welcome-main-container"></div>
-        <div class="mood-bar">
-            <div class="mood-button-container">
-                <div class="mood-button">Happy</div>
-                <div class="mood-button">Sad</div>
-                <div class="mood-button">Chill</div>
-                <div class="mood-button">Hype</div>
-                <div class="mood-button">Romantic</div>
-                <div class="mood-button">Motivated</div>
+        <div id="main-page">
+            <div class="welcome-main-container"></div>
+            <div class="mood-bar">
+                <div class="mood-button-container">
+                    <button class="mood-button">Happy</button>
+                    <button class="mood-button">Sad</button>
+                    <button class="mood-button">Chill</button>
+                    <button class="mood-button">Hype</button>
+                    <button class="mood-button">Romantic</button>
+                    <button class="mood-button">Motivated</button>
+                </div>
             </div>
         </div>
+        <div id="content-page"></div>
     </body>
 </html>
