adds timer, greeting and title  to main page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     </head>
     <body>
         <div id="main-page">
-            <div class="welcome-main-container"></div>
+            <div class="welcome-main-container">
+                <div class="title-container">
+                    <h1 class="title">Ambiencer</h1>
+                </div>
+                <div class="time-container">
+                    <div class="js-clock">
+                        <p class="clock">0:00</p>
+                        <p class="greeting">Good Morning!</p>
+                    </div>
+                </div>
+            </div>
             <div class="mood-bar">
                 <div class="mood-button-container">
                     <button class="mood-button">Happy</button>
