adds skeleton for content page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
                 </div>
             </div>
         </div>
-        <div id="content-page"></div>
+        <div id="content-page">
+            <div class="header-container">Ambiencer</div>
+            <div class="section-container">
+                <div class="section-header section-video"></div>
+                <div class="section-content-container"></div>
+            </div>
+            <div class="section-container">
+                    <div class="section-header section-poem"></div>
+                    <div class="section-content-container"></div>
+            </div>
+            <div class="section-container">
+                    <div class="section-header section-news"></div>
+                    <div class="section-content-container"></div>
+            </div>
+            <div class="section-container">
+                    <div class="section-header section-gif"></div>
+                    <div class="section-content-container"></div>
+            </div>
+        </div>
     </body>
 </html>
