--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <!-- MAIN SPLASH SCREEN  -->
         <div id="main-page">
             <div class="welcome-main-container">
                 <div class="title-container">
@@ -30,8 +31,21 @@
                 </div>
             </div>
         </div>
+        <!-- END MAIN SPLASH SCREEN  -->
+        <!-- CONTENT PAGE  -->
         <div id="content-page">
-            <div class="header-container">Ambiencer</div>
+            <div class="header-container">
+                <h1>Ambiencer</h1>
+                <nav class="nav">
+                    <ul class="menu">
+                        <li><a href="#music">Music</a></li>
+                        <li><a href="#poem">Poem</a></li>
+                        <li><a href="#news">News</a></li>
+                        <li><a href="#other">Other</a></li>
+                    </ul>
+                </nav>
+            </div>
+
             <div class="section-container">
                 <div class="section-header section-video"></div>
                 <div class="section-content-container"></div>
@@ -49,5 +63,6 @@
                     <div class="section-content-container"></div>
             </div>
         </div>
+        <!-- END CONTENT PAGE  -->
     </body>
 </html>
