centers section text

--- a/index.html
+++ b/index.html
@@ -47,19 +47,35 @@
             </div>
 
             <div class="section-container">
-                <div class="section-header section-video"></div>
+                <div class="section-header section-video">
+                    <h3>
+                        blah blah
+                    </h3>
+                </div>
                 <div class="section-content-container"></div>
             </div>
             <div class="section-container">
-                    <div class="section-header section-poem"></div>
+                    <div class="section-header section-poem">
+                        <h3>
+                            another blah
+                        </h3>
+                    </div>
                     <div class="section-content-container"></div>
             </div>
             <div class="section-container">
-                    <div class="section-header section-news"></div>
+                    <div class="section-header section-news">
+                        <h3>
+                            blah * 2
+                        </h3>
+                    </div>
                     <div class="section-content-container"></div>
             </div>
             <div class="section-container">
-                    <div class="section-header section-gif"></div>
+                    <div class="section-header section-gif">
+                        <h3>
+                            the last blah
+                        </h3>
+                    </div>
                     <div class="section-content-container"></div>
             </div>
         </div>
