adds smooth scrolling for sections when clicking the links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="section-container">
-                <div class="section-header section-video">
+                <div id="music" class="section-header">
                     <h3>
                         blah blah
                     </h3>
@@ -55,7 +55,7 @@
                 <div class="section-content-container"></div>
             </div>
             <div class="section-container">
-                    <div class="section-header section-poem">
+                    <div id="poem" class="section-header">
                         <h3>
                             another blah
                         </h3>
@@ -63,7 +63,7 @@
                     <div class="section-content-container"></div>
             </div>
             <div class="section-container">
-                    <div class="section-header section-news">
+                    <div id="news" class="section-header">
                         <h3>
                             blah * 2
                         </h3>
@@ -71,7 +71,7 @@
                     <div class="section-content-container"></div>
             </div>
             <div class="section-container">
-                    <div class="section-header section-gif">
+                    <div id="other" class="section-header">
                         <h3>
                             the last blah
                         </h3>
