adds different header text depending on mood set

--- a/index.html
+++ b/index.html
@@ -41,40 +41,40 @@
                         <li><a href="#music">Music</a></li>
                         <li><a href="#poem">Poem</a></li>
                         <li><a href="#news">News</a></li>
-                        <li><a href="#other">Other</a></li>
+                        <li><a href="#gif">Other</a></li>
                     </ul>
                 </nav>
             </div>
 
             <div class="section-container">
                 <div id="music" class="section-header">
-                    <h3>
+                    <h1>
                         blah blah
-                    </h3>
+                    </h1>
                 </div>
                 <div class="section-content-container"></div>
             </div>
             <div class="section-container">
                     <div id="poem" class="section-header">
-                        <h3>
+                        <h1>
                             another blah
-                        </h3>
+                        </h1>
                     </div>
                     <div class="section-content-container"></div>
             </div>
             <div class="section-container">
                     <div id="news" class="section-header">
-                        <h3>
+                        <h1>
                             blah * 2
-                        </h3>
+                        </h1>
                     </div>
                     <div class="section-content-container"></div>
             </div>
             <div class="section-container">
-                    <div id="other" class="section-header">
-                        <h3>
+                    <div id="gif" class="section-header">
+                        <h1>
                             the last blah
-                        </h3>
+                        </h1>
                     </div>
                     <div class="section-content-container"></div>
             </div>
