adds click handler to buttons to generate sections text based on mood

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             </div>
             <div class="mood-bar">
                 <div class="mood-button-container">
-                    <button class="mood-button">Happy</button>
-                    <button class="mood-button">Sad</button>
-                    <button class="mood-button">Chill</button>
-                    <button class="mood-button">Hype</button>
-                    <button class="mood-button">Romantic</button>
-                    <button class="mood-button">Motivated</button>
+                    <button class="mood-button happy">Happy</button>
+                    <button class="mood-button sad">Sad</button>
+                    <button class="mood-button chill">Chill</button>
+                    <button class="mood-button hype">Hype</button>
+                    <button class="mood-button romantic">Romantic</button>
+                    <button class="mood-button motivated">Motivated</button>
                 </div>
             </div>
         </div>
