--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div id="content-page">
             <div class="header-container">
                 <h1>Ambiencer</h1>
+                <h3 class="back-to-main">Change Mood</h3>
                 <nav class="nav">
                     <ul class="menu">
                         <li><a href="#music">Music</a></li>
