--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
         <script src="clock.js"></script>
+        <script src="weather.js"></script>
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
