--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <div class="welcome-main-container">
                 <div class="title-container">
                     <h1 class="title">Ambiencer</h1>
+                    <div class="weather-box">
+                        <h1 class="weather-temp">45°F</h1>
+                        <h4 class="weather-location">Lake Forest, CA</h4>
+                    </div>
                 </div>
                 <div class="time-container">
                     <div class="js-clock">
