adds methods to request temperature data adds method to render the response to the DOM

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <div class="title-container">
                     <h1 class="title">Ambiencer</h1>
                     <div class="weather-box">
-                        <h1 class="weather-temp">45°F</h1>
-                        <h4 class="weather-location">Lake Forest, CA</h4>
+                        <h1 class="weather-temp">0°</h1>
+                        <h4 class="weather-location"></h4>
                     </div>
                 </div>
                 <div class="time-container">
