--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                         blah blah
                     </h1>
                 </div>
-                <div class="section-content-container"></div>
+                <div class="section-content-container">
+                    <div class="video-container"></div>
+                </div>
             </div>
             <div class="section-container">
                     <div id="poem" class="section-header">
