--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Ambiencer - The perfect way to set your mood</title>
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
         <script src="credentials.js"></script>
         <script src="clock.js"></script>
