--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="clock.js"></script>
         <script src="weather.js"></script>
         <script src="music.js"></script>
+        <script src="images.js"></script>
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
