--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         blah blah
                     </h1>
                 </div>
-                <div class="section-content-container">
+                <div class="section-content-container section-1">
                     <div class="video-container"></div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                             another blah
                         </h1>
                     </div>
-                    <div class="section-content-container"></div>
+                    <div class="section-content-container section-2"></div>
             </div>
             <div class="section-container">
                     <div id="news" class="section-header">
@@ -80,7 +80,7 @@
                             blah * 2
                         </h1>
                     </div>
-                    <div class="section-content-container"></div>
+                    <div class="section-content-container section-3"></div>
             </div>
             <div class="section-container">
                     <div id="gif" class="section-header">
@@ -88,7 +88,7 @@
                             the last blah
                         </h1>
                     </div>
-                    <div class="section-content-container"></div>
+                    <div class="section-content-container section-4"></div>
             </div>
         </div>
         <!-- END CONTENT PAGE  -->
