adds text to ask user to choose a mood modifies font units to be more responsive

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <p class="greeting">Good Morning!</p>
                     </div>
                 </div>
+                <div class="button-header-container">
+                    <h3 class="mood-text">Choose a mood Below</h3>
+                </div>
             </div>
             <div class="mood-bar">
                 <div class="mood-button-container">
