--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="weather.js"></script>
         <script src="music.js"></script>
         <script src="images.js"></script>
+        <script src="news.js"></script>
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
