--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Ambiencer - The perfect way to set your mood</title>
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
         <script src="credentials.js"></script>
+        <script src="shared.js"></script>
         <script src="clock.js"></script>
         <script src="weather.js"></script>
         <script src="music.js"></script>
