renders news articles to DOM formats text fo the title of each article

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                             blah * 2
                         </h1>
                     </div>
-                    <div class="section-content-container section-3"></div>
+                    <div class="section-content-container section-3">
+                        <div id="news-content-container"></div>
+                    </div>
             </div>
             <div class="section-container">
                     <div id="gif" class="section-header">
