adds gifs.js to index instantiates the gif class sends query to gifAPI

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="music.js"></script>
         <script src="images.js"></script>
         <script src="news.js"></script>
+        <script src="gifs.js"></script>
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
