--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                             the last blah
                         </h1>
                     </div>
-                    <div class="section-content-container section-4"></div>
+                    <div class="section-content-container section-4">
+                        <div id="gif-content-container"></div>
+                    </div>
             </div>
         </div>
         <!-- END CONTENT PAGE  -->
