adds poems.js to index instantiates new poem class makes query for retrieving poems

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="weather.js"></script>
         <script src="music.js"></script>
         <script src="images.js"></script>
+        <script src="poems.js"></script>
         <script src="news.js"></script>
         <script src="gifs.js"></script>
         <script src="main.js"></script>
