chooses random poem to be displayed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="section-container">
                 <div id="music" class="section-header">
                     <h1>
-                        blah blah
+                        Music
                     </h1>
                 </div>
                 <div class="section-content-container section-1">
@@ -76,15 +76,17 @@
             <div class="section-container">
                     <div id="poem" class="section-header">
                         <h1>
-                            another blah
+                            Poem
                         </h1>
                     </div>
-                    <div class="section-content-container section-2"></div>
+                    <div class="section-content-container section-2">
+                        <div id="poem-section-container"></div>
+                    </div>
             </div>
             <div class="section-container">
                     <div id="news" class="section-header">
                         <h1>
-                            blah * 2
+                            News
                         </h1>
                     </div>
                     <div class="section-content-container section-3">
@@ -94,7 +96,7 @@
             <div class="section-container">
                     <div id="gif" class="section-header">
                         <h1>
-                            the last blah
+                            GIF
                         </h1>
                     </div>
                     <div class="section-content-container section-4">
