--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </h1>
                     </div>
                     <div class="section-content-container section-2">
-                        <div id="poem-section-container"></div>
+                        <div id="poem-content-container"></div>
                     </div>
             </div>
             <div class="section-container">
