refactors code so current mood and change mood makes sense moves title to left of screen adds shadow to title

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         <div id="content-page">
             <div class="header-container">
                 <h1>Ambiencer</h1>
-                <h3 class="back-to-main">Change Mood</h3>
+                <h3>Current Mood: 
+                    <span class="current-mood">Mood</span>
+                    <span class="change-mood">Change</span>
+                </h3>
                 <nav class="nav">
                     <ul class="menu">
                         <li><a href="#music">Music</a></li>
