--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ambiencer - The perfect way to set your mood</title>
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
         <script src="credentials.js"></script>
