moved js files to own assets folder

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ambiencer - The perfect way to set your mood</title>
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-        <script src="credentials.js"></script>
-        <script src="shared.js"></script>
-        <script src="clock.js"></script>
-        <script src="weather.js"></script>
-        <script src="music.js"></script>
-        <script src="images.js"></script>
-        <script src="poems.js"></script>
-        <script src="news.js"></script>
-        <script src="gifs.js"></script>
+        <script src="assets/modules/credentials.js"></script>
+        <script src="assets/modules/shared.js"></script>
+        <script src="assets/modules/clock.js"></script>
+        <script src="assets/modules/weather.js"></script>
+        <script src="assets/modules/music.js"></script>
+        <script src="assets/modules/images.js"></script>
+        <script src="assets/modules/poems.js"></script>
+        <script src="assets/modules/news.js"></script>
+        <script src="assets/modules/gifs.js"></script>
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
