Change font format to vmin reduce font size for landscape mobile devices shrink GIF to fit container changes 'current  mood' text to only 'mood' changes change mood link to font awesome edit icon reduces size of menu to take up less space

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ambiencer - The perfect way to set your mood</title>
+        <script src="https://kit.fontawesome.com/335eae7a70.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
         <script src="assets/modules/credentials.js"></script>
         <script src="assets/modules/shared.js"></script>
@@ -54,9 +55,10 @@
             <div id="content-page">
                 <div class="header-container">
                     <h1>Ambiencer</h1>
-                    <h3>Current Mood: 
+                    <h3>Mood: 
                         <span class="current-mood">Mood</span>
-                        <span class="change-mood">Change</span>
+                        <!-- <span class="change-mood">Change</span> -->
+                        <span class="change-mood"><i class="fas fa-edit"></i></span>
                     </h3>
                     <nav class="nav">
                         <ul class="menu">
