--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <title>Ambiencer - The perfect way to set your mood</title>
         <script src="https://kit.fontawesome.com/335eae7a70.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-        <script src="assets/js/credentials.js"></script>
-        <script src="assets/js/shared.js"></script>
-        <script src="assets/js/clock.js"></script>
-        <script src="assets/js/weather.js"></script>
-        <script src="assets/js/music.js"></script>
-        <script src="assets/js/images.js"></script>
-        <script src="assets/js/poems.js"></script>
-        <script src="assets/js/news.js"></script>
-        <script src="assets/js/gifs.js"></script>
-        <script src="main.js"></script>
+        <script src="js/credentials.js"></script>
+        <script src="js/shared.js"></script>
+        <script src="js/clock.js"></script>
+        <script src="js/weather.js"></script>
+        <script src="js/music.js"></script>
+        <script src="js/images.js"></script>
+        <script src="js/poems.js"></script>
+        <script src="js/news.js"></script>
+        <script src="js/gifs.js"></script>
+        <script src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
