--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="js/poems.js"></script>
         <script src="js/news.js"></script>
         <script src="js/gifs.js"></script>
+        <script src="js/app.js"></script>
         <script src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css" />
     </head>
