--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="title-container">
                         <h1 class="title">Ambiencer</h1>
                         <div class="weather-box">
-                            <h1 class="weather-temp">0°</h1>
+                            <h1 class="weather-temp">0&deg;</h1>
                             <h4 class="weather-location"></h4>
                         </div>
                     </div>
