adds meta tag to update security policy

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ambiencer - The perfect way to set your mood</title>
         <script src="https://kit.fontawesome.com/335eae7a70.js" crossorigin="anonymous"></script>
