--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="js/news.js"></script>
         <script src="js/gifs.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/news2.js"></script>
         <script src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css" />
     </head>
